[package]
name = "custom_impl_test"
description = "Helper crate for testing custom implementations"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false

[workspace]

[dependencies]
getrandom = { git = "https://github.com/earthlings-dev/getrandom.git" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(getrandom_backend, values("custom", "extern_impl"))',
]
